fix view on mobile

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -28,3 +28,9 @@
 .hide {
   display: none;
 }
+
+@media only screen and (max-width: 599px) {
+  .artists-wrapper {
+    justify-content: center
+  }
+}
